Add user/emails API to swagger docs
